# pathfinding

./: README.md  main.py  pyproject.toml
pathfinding/assets/: police.csv
pathfinding/model/: GetPoiModel.py  PointModel.py  __init__.py
pathfinding/service/: __init__.py  get_destinations.py  get_trash_points.py  get_trashes.py
pathfinding/util/: Request.py  __init__.py  distance.py  optimization.py  walking.py
